@@ -1,9 +1,12 @@
 2008-04-19  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+
 	* files.el (locate-file-completion-table): Rename from
 	locate-file-completion and make it use `pred' in the normal way.
 	(locate-file-completion): New compatibility wrapper.
 	(load-library): Use locate-file-completion-table.
+	* finder.el (finder-commentary):
+	* subr.el (locate-library):
 	* emacs-lisp/find-func.el (find-library): Likewise.
 	* info.el: Use with-current-buffer and inhibit-read-only.
 	(Info-read-node-name-2): Change to use `predicate' in the normal way.
